--- a/day-1/index.html
+++ b/day-1/index.html
@@ -65,8 +65,7 @@
         style="display: flex;justify-content: center;padding-top: 15px; font-size: 25px; font-weight: 400;color: #424242;">
         Online platform to invest in stocks, derivatives, mutual funds, and more</div>
     <center>
-        <div class="Signup">
-            Sign up now</div>
+        <div class="Signup"> Sign up now</div>
     </center>
 </body>
 
