--- a/day-3/index.html
+++ b/day-3/index.html
@@ -16,6 +16,8 @@
             <div class="header-right">Log in</div>
             <div class="header-right">Sign Up</div>
         </div>
+        <div class="brand-name"><img src="./img/brand-name.avif" class="brand-name-img"></div>
+        <div class="brand-slogan">Discover the best food & drinks in Pune</div>
     </div>
 </body>
 </html>
